--- a/vue-news/package.json
+++ b/vue-news/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "babel": "^6.23.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
